[chaos]:新增角色管理接口
