# chaos-base-modules/chaos-system/src/main/java/com/chaos/system/entity/bo/SysRoleBO.java
@@ -1,0 +1,32 @@
+package com.chaos.system.entity.bo;
+
+import com.chaos.system.entity.SysUserPO;
+import io.github.linpeilie.annotations.AutoMapper;
+import java.io.Serial;
+import java.io.Serializable;
+import lombok.Data;
+
+/**
+ * bo层-角色信息
+ *
+ * @author S.H.I.E.L.D
+ * @since 2023/08/21 14:52
+ */
+@Data
+@AutoMapper(target = SysUserPO.class, reverseConvertGenerate = false)
+public class SysRoleBO implements Serializable {
+
+  @Serial private static final long serialVersionUID = 1L;
+
+  /** 用户id */
+  private Long id;
+
+  /** 角色名称 */
+  private String roleName;
+
+  /** 角色字符串 */
+  private String roleKey;
+
+  /** 角色排序 */
+  private Integer roleSort;
+}
